[package]
name = "testing-utils"
version = "0.1.2"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "Simple testing utils"
repository = "https://github.com/vasilakisfil/testing-utils"
documentation = "https://docs.rs/testing-utils"
keywords = ["test", "utils", "traits", "randomize"]
categories = ["development-tools"]
license = "MIT"

[dependencies]
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
